--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,18 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/background1.jpg
+    - assets/background2.jpg
+    - assets/copyright.png
+    - assets/google.png
+    - assets/hadis.png
+    - assets/kaabah.png
+    - assets/qibla.png
+    - assets/read-quran.png
+    - assets/solat.png
+    - assets/user.png
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
