--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   permission_handler: ^10.2.0
   google_sign_in: ^6.1.6
   cached_network_image: ^3.3.1
+  geolocator: ^10.0.0
+  intl: ^0.18.0
+  timezone: ^0.7.0
 
 dev_dependencies:
   flutter_test:
