--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   geolocator: ^10.0.0
   intl: ^0.18.0
   timezone: ^0.7.0
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
