--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,16 @@ dependencies:
   shared_preferences: ^2.0.15
   provider: ^6.0.5
   url_launcher: ^6.0.17
-  permission_handler: ^10.2.0
+  permission_handler: ^11.3.1
   google_sign_in: ^6.1.6
   cached_network_image: ^3.3.1
-  geolocator: ^10.0.0
-  intl: ^0.18.0
-  timezone: ^0.7.0
+  geolocator: ^13.0.1
+  intl: ^0.19.0
+  timezone: ^0.9.4
   image_picker: ^1.0.0
+  win32: ^5.7.2
+#  flutter_qiblah: ^3.0.0
+#  flutter_compass: ^0.8.0
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +62,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -83,6 +86,7 @@ flutter:
     - assets/read-quran.png
     - assets/solat.png
     - assets/user.png
+    - assets/compass.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
