--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
     - assets/solat.png
     - assets/user.png
     - assets/compass.png
+    - assets/zikir.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
