--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   win32: ^5.7.2
   flutter_qiblah: ^3.0.0
   prayers_times: ^0.0.6
+  quran: ^1.3.3
+  google_fonts: ^6.2.1
+  hadith: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +91,8 @@ flutter:
     - assets/compass.png
     - assets/zikir.png
     - assets/qiblaneedle.png
+    - assets/mosque.png
+    - assets/MasjidKITALogo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
