--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   quran: ^1.3.3
   google_fonts: ^6.2.1
   hadith: ^1.0.0
+  flutter_debouncer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
