--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,14 +50,14 @@ dependencies:
   timezone: ^0.9.4
   image_picker: ^1.0.0
   win32: ^5.7.2
-  flutter_qiblah: ^3.0.0
+  flutter_qiblah: ^3.0.4
+  loading_indicator: ^3.1.1
   prayers_times: ^0.0.6
   quran: ^1.3.3
   google_fonts: ^6.2.1
   hadith: ^1.0.0
   flutter_debouncer: ^2.0.0
   sensors_plus: ^5.0.1
-  compassx: ^1.0.1
 
 
 dev_dependencies:
@@ -88,16 +88,17 @@ flutter:
     - assets/copyright.png
     - assets/google.png
     - assets/hadis.png
-    - assets/qibla.png
     - assets/read-quran.png
     - assets/solat.png
     - assets/user.png
-    - assets/compass.png
     - assets/zikir.png
-    - assets/qiblaneedle.png
     - assets/mosque.png
     - assets/MasjidKITALogo.png
     - assets/compassgif.gif
+    - data/dzikir_pagi.json
+    - assets/purple_background.jpg
+    - assets/qiblah.png
+    - assets/qibla.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
