--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,6 @@ dependencies:
   cached_network_image: ^3.3.1
   geolocator: ^13.0.1
   intl: ^0.19.0
-  timezone: ^0.9.4
   image_picker: ^1.0.0
   win32: ^5.7.2
   flutter_qiblah: ^3.0.4
@@ -58,6 +57,8 @@ dependencies:
   hadith: ^1.0.0
   flutter_debouncer: ^2.0.0
   sensors_plus: ^5.0.1
+  timezone: ^0.9.4
+  tbib_get_timezone_location: ^1.1.1
 
 
 dev_dependencies:
@@ -99,6 +100,7 @@ flutter:
     - assets/purple_background.jpg
     - assets/qiblah.png
     - assets/qibla.png
+    - assets/islam_background.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
