--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,9 @@ flutter:
     - assets/qiblah.png
     - assets/qibla.png
     - assets/islam_background.jpg
+    - data/doa.json
+    - assets/tasbih.png
+    - assets/praying.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
