--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,7 +104,7 @@ flutter:
     - assets/praying.png
     - data/dzikir_pagi.json
     - data/doa.json
-    - data/nawawi.json
+    - data/nawawi40.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
