--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,18 +64,18 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.1
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/MasjidKITALogo.png"
+  min_sdk_android: 21
+  adaptive_icon_background: "#ffffff" # You can use a color or image for the background
+  adaptive_icon_foreground: "assets/icon/MasjidKITALogo.png" # For adaptive icons on Android
 
-# The following section is specific to Flutter packages.
+
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -89,6 +89,8 @@ flutter:
     - assets/background/quran-background.jpg
     - assets/background/purple_background.jpg
     - assets/background/islam_background.jpg
+    - assets/background/homebackground.jpg
+    - assets/background/islamic-white.jpg
     - assets/icon/qiblah.png
     - assets/icon/copyright.png
     - assets/icon/google.png
@@ -99,6 +101,7 @@ flutter:
     - assets/icon/zikir.png
     - assets/icon/mosque.png
     - assets/icon/MasjidKITALogo.png
+    - assets/icon/appicon.png
     - assets/icon/qibla.png
     - assets/icon/tasbih.png
     - assets/icon/praying.png
