--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,30 +85,21 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/background/background1.jpg
-    - assets/background/background2.jpg
-    - assets/background/quran-background.jpg
-    - assets/background/purple_background.jpg
-    - assets/background/islam_background.jpg
     - assets/background/homebackground.jpg
     - assets/background/islamic-white.jpg
     - assets/icon/qiblah.png
-    - assets/icon/masjidKITA-logo.png
+    - assets/icon/pusaraKITA.png
     - assets/icon/kariahKITA.png
     - assets/icon/khairatKITA.png
     - assets/icon/copyright.png
+    - assets/icon/chat.png
+    - assets/icon/calendar.png
+    - assets/icon/booking.png
     - assets/icon/google.png
-    - assets/icon/hadis.png
     - assets/icon/read-quran.png
     - assets/icon/solat.png
-    - assets/icon/user.png
-    - assets/icon/zikir.png
-    - assets/icon/mosque.png
     - assets/icon/MasjidKITA-Logo.png
-    - assets/icon/appicon.png
     - assets/icon/qibla.png
-    - assets/icon/tasbih.png
-    - assets/icon/praying.png
     - assets/compassgif.gif
     - data/dzikir_pagi.json
     - data/doa.json
