--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,6 @@ dependencies:
   win32: ^5.7.2
   flutter_qiblah: ^3.0.4
   loading_indicator: ^3.1.1
-  pray_times: ^0.0.1
   adhan: ^2.0.0+1
   quran: ^1.3.3
   google_fonts: ^6.2.1
@@ -59,7 +58,7 @@ dependencies:
   flutter_debouncer: ^2.0.0
   sensors_plus: ^5.0.1
   timezone: ^0.9.4
-  hijri_picker: ^3.0.0
+  waktu_solat: ^1.0.1
   table_calendar: ^3.1.2
 
 
